03-jump-app-deploy.yaml
---
# Source: jump-app/charts/jump-app-micros/templates/istio/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: back-golang
  name: back-golang
spec:
  ports:
    - name: http-8442
      port: 8442
      protocol: TCP
      targetPort: 8442   
  selector:
    app: back-golang
---
# Source: jump-app/charts/jump-app-micros/templates/istio/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: back-python
  name: back-python
spec:
  ports:
    - name: http-8444
      port: 8444
      protocol: TCP
      targetPort: 8080   
  selector:
    app: back-python
---
# Source: jump-app/charts/jump-app-micros/templates/istio/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: back-springboot
  name: back-springboot
spec:
  ports:
    - name: http-8080
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: http-8443
      port: 8443
      protocol: TCP
      targetPort: 8443
    - name: http-8778
      port: 8778
      protocol: TCP
      targetPort: 8778   
  selector:
    app: back-springboot
---
# Source: jump-app/charts/jump-app-micros/templates/istio/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: front-javascript
  name: front-javascript
spec:
  ports:
    - name: http-8080
      port: 8080
      protocol: TCP
      targetPort: 3000   
  selector:
    app: front-javascript
---
# Source: jump-app/charts/jump-app-micros/templates/jump-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: back-golang
    version: v1
  name: back-golang-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back-golang
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        name: back-golang-v1
        app: back-golang
        version: v1
    spec:
      containers:
      - image: quay.io/acidonpe/jump-app-back-golang:latest
        imagePullPolicy: Always
        name: back-golang-v1
        ports:
          - containerPort: 8442
            protocol: TCP
        resources: {}
---
# Source: jump-app/charts/jump-app-micros/templates/jump-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: back-golang
    version: v2
  name: back-golang-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back-golang
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        name: back-golang-v2
        app: back-golang
        version: v2
    spec:
      containers:
      - image: quay.io/acidonpe/jump-app-back-golang:latest
        imagePullPolicy: Always
        name: back-golang-v2
        ports:
          - containerPort: 8442
            protocol: TCP
        resources: {}
---
# Source: jump-app/charts/jump-app-micros/templates/jump-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: back-python
    version: v1
  name: back-python-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back-python
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        name: back-python-v1
        app: back-python
        version: v1
    spec:
      containers:
      - image: quay.io/acidonpe/jump-app-back-python:latest
        imagePullPolicy: Always
        name: back-python-v1
        ports:
          - containerPort: 8080
            protocol: TCP
        resources: {}
---
# Source: jump-app/charts/jump-app-micros/templates/jump-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: back-python
    version: v2
  name: back-python-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back-python
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        name: back-python-v2
        app: back-python
        version: v2
    spec:
      containers:
      - image: quay.io/acidonpe/jump-app-back-python:latest
        imagePullPolicy: Always
        name: back-python-v2
        ports:
          - containerPort: 8080
            protocol: TCP
        resources: {}
---
# Source: jump-app/charts/jump-app-micros/templates/jump-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: back-springboot
    version: v1
  name: back-springboot-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back-springboot
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        name: back-springboot-v1
        app: back-springboot
        version: v1
    spec:
      containers:
      - image: quay.io/acidonpe/jump-app-back-springboot:latest
        imagePullPolicy: Always
        name: back-springboot-v1
        ports:
          - containerPort: 8443
            protocol: TCP
          - containerPort: 8443
            protocol: TCP
          - containerPort: 8778
            protocol: TCP
        resources: {}
---
# Source: jump-app/charts/jump-app-micros/templates/jump-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: back-springboot
    version: v2
  name: back-springboot-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back-springboot
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        name: back-springboot-v2
        app: back-springboot
        version: v2
    spec:
      containers:
      - image: quay.io/acidonpe/jump-app-back-springboot:latest
        imagePullPolicy: Always
        name: back-springboot-v2
        ports:
          - containerPort: 8443
            protocol: TCP
          - containerPort: 8443
            protocol: TCP
          - containerPort: 8778
            protocol: TCP
        resources: {}
---
# Source: jump-app/charts/jump-app-micros/templates/jump-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: front-javascript
    version: v1
  name: front-javascript-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-javascript
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        name: front-javascript-v1
        app: front-javascript
        version: v1
    spec:
      containers:
      - image: quay.io/acidonpe/jump-app-front-javascript:latest
        imagePullPolicy: Always
        name: front-javascript-v1
        ports:
          - containerPort: 3000
            protocol: TCP
        resources: {}
---
# Source: jump-app/charts/jump-app-micros/templates/jump-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: front-javascript
    version: v2
  name: front-javascript-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-javascript
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        name: front-javascript-v2
        app: front-javascript
        version: v2
    spec:
      containers:
      - image: quay.io/acidonpe/jump-app-front-javascript:latest
        imagePullPolicy: Always
        name: front-javascript-v2
        ports:
          - containerPort: 3000
            protocol: TCP
        resources: {}
---
# Source: jump-app/charts/jump-app-micros/templates/istio/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: back-golang
spec:
  host: back-golang.jump-app.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
# Source: jump-app/charts/jump-app-micros/templates/istio/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: back-python
spec:
  host: back-python.jump-app.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
# Source: jump-app/charts/jump-app-micros/templates/istio/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: back-springboot
spec:
  host: back-springboot.jump-app.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
# Source: jump-app/charts/jump-app-micros/templates/istio/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: front-javascript
spec:
  host: front-javascript.jump-app.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
# Source: jump-app/charts/jump-app-micros/templates/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: back-golang
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
      - back-golang-istio-system.apps.cluster-dxv42.dxv42.sandbox1618.opentlc.com
---
# Source: jump-app/charts/jump-app-micros/templates/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: front-javascript
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
      - front-javascript-istio-system.apps.cluster-dxv42.dxv42.sandbox1618.opentlc.com
---
# Source: jump-app/charts/jump-app-micros/templates/istio/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: back-golang-istio-system
  namespace: istio-system
spec:
  host: back-golang-istio-system.apps.cluster-dxv42.dxv42.sandbox1618.opentlc.com
  to:
    kind: Service
    name: istio-ingressgateway
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  port:
    targetPort: http2
---
# Source: jump-app/charts/jump-app-micros/templates/istio/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: front-javascript-istio-system
  namespace: istio-system
spec:
  host: front-javascript-istio-system.apps.cluster-dxv42.dxv42.sandbox1618.opentlc.com
  to:
    kind: Service
    name: istio-ingressgateway
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  port:
    targetPort: http2
---
# Source: jump-app/charts/jump-app-micros/templates/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: back-golang
spec:
  gateways:
  - back-golang
  - mesh
  hosts:
  - back-golang-istio-system.apps.cluster-dxv42.dxv42.sandbox1618.opentlc.com
  - back-golang
  http:
  - route:
      - destination:
          host: back-golang.jump-app.svc.cluster.local
          subset: v1
        weight: 100
      - destination:
          host: back-golang.jump-app.svc.cluster.local
          subset: v2
        weight: 0
---
# Source: jump-app/charts/jump-app-micros/templates/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: back-python
spec:
  gateways:
  - mesh
  hosts:
  - back-python
  http:
  - route:
      - destination:
          host: back-python.jump-app.svc.cluster.local
          subset: v1
        weight: 100
      - destination:
          host: back-python.jump-app.svc.cluster.local
          subset: v2
        weight: 0
---
# Source: jump-app/charts/jump-app-micros/templates/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: back-springboot
spec:
  gateways:
  - mesh
  hosts:
  - back-springboot
  http:
  - route:
      - destination:
          host: back-springboot.jump-app.svc.cluster.local
          subset: v1
        weight: 100
      - destination:
          host: back-springboot.jump-app.svc.cluster.local
          subset: v2
        weight: 0
---
# Source: jump-app/charts/jump-app-micros/templates/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: front-javascript
spec:
  gateways:
  - front-javascript
  - mesh
  hosts:
  - front-javascript-istio-system.apps.cluster-dxv42.dxv42.sandbox1618.opentlc.com
  - front-javascript
  http:
  - route:
      - destination:
          host: front-javascript.jump-app.svc.cluster.local
          subset: v1
        weight: 100
      - destination:
          host: front-javascript.jump-app.svc.cluster.local
          subset: v2
        weight: 0
